--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,8 +41,8 @@
       </ion-item>
 
       <ion-item-options>
-        <button primary (click)="showModal(task.id)"><ion-icon name="clipboard">Editar</ion-icon></button>
-        <button danger (click)="deleleTask(task.id)"><ion-icon name="trash">Remover</ion-icon></button>
+        <button ion-button color="primary" (click)="showModal(task.id)"><ion-icon name="clipboard"></ion-icon>Editar</button>
+        <button ion-button color="danger" (click)="deleleTask(task.id)"><ion-icon name="trash"></ion-icon>Remover</button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
