--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-navbar primary>
+  <ion-navbar color="primary">
     <ion-title>
       IFC Tasks
     </ion-title>
 
     <ion-buttons end>
-      <button>
+      <button ion-button>
            <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
       </button>
     </ion-buttons>
