--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
     </ion-title>
 
     <ion-buttons end>
-      <button ion-button>
+      <button ion-button (click)="showModal()">
            <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon>
       </button>
     </ion-buttons>
