style: alterando a mensagem caso não tenha tarefas adicionadas

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,9 +16,9 @@
 <ion-content>
   <ion-list>
     <ion-item *ngIf="!tasks.length">
-      Você não tem nenhuma tarefa adicionada.
+      Voce nao tem nenhuma tarefa.
       <p>
-        Clique <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon> para adicionar novas tarefas.
+        Clique em  <ion-icon ios="ios-add-circle" md="md-add-circle"></ion-icon> para adicionar novas tarefas.
       </p>
     </ion-item>
 
