--- a/src/pages/modal/modal.html
+++ b/src/pages/modal/modal.html
@@ -33,9 +33,9 @@
         <ion-item>
             <ion-label stacked>Prioridade</ion-label>
             <ion-select [(ngModel)]="task.priority">
-                <ion-option value="low">Baixa</ion-option>
+                <ion-option value="baixa">Baixa</ion-option>
                 <ion-option value="normal">Normal</ion-option>
-                <ion-option value="high">Alta</ion-option>
+                <ion-option value="alta">Alta</ion-option>
             </ion-select>
         </ion-item>
 
