feat: editando tasks

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -41,7 +41,7 @@
       </ion-item>
 
       <ion-item-options>
-        <button ion-button color="primary" (click)="showModal(task.task.id)"><ion-icon name="clipboard"></ion-icon>Editar</button>
+        <button ion-button color="primary" (click)="editTask(task.key, task.task)"><ion-icon name="clipboard"></ion-icon>Editar</button>
         <button ion-button color="danger" (click)="removeTask(task.key)"><ion-icon name="trash"></ion-icon>Remover</button>
       </ion-item-options>
     </ion-item-sliding>
